syntax = "proto3";

package todo.common;

option go_package = "api/protos/common;todopb";

import "google/protobuf/timestamp.proto";

// Error response
message ErrorResponse {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
  google.protobuf.Timestamp timestamp = 4;
}

// 错误码枚举
enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;

  // 通用错误 (1-99)
  ERROR_CODE_INVALID_ARGUMENT = 1;
  ERROR_CODE_UNAUTHENTICATED = 2;
  ERROR_CODE_PERMISSION_DENIED = 3;
  ERROR_CODE_NOT_FOUND = 4;
  ERROR_CODE_ALREADY_EXISTS = 5;
  ERROR_CODE_RESOURCE_EXHAUSTED = 6;
  ERROR_CODE_FAILED_PRECONDITION = 7;
  ERROR_CODE_ABORTED = 8;
  ERROR_CODE_OUT_OF_RANGE = 9;
  ERROR_CODE_UNIMPLEMENTED = 10;
  ERROR_CODE_INTERNAL = 11;
  ERROR_CODE_UNAVAILABLE = 12;
  ERROR_CODE_DATA_LOSS = 13;

  // 业务错误 (100-199)
  ERROR_CODE_USER_NOT_ACTIVE = 100;
  ERROR_CODE_EMAIL_NOT_VERIFIED = 101;
  ERROR_CODE_TEAM_MEMBER_LIMIT = 102;
  ERROR_CODE_FILE_SIZE_LIMIT = 103;
  ERROR_CODE_VIDEO_DURATION_LIMIT = 104;  // 4-minute limit
  ERROR_CODE_RESOURCE_LOCKED = 105;
  ERROR_CODE_INVALID_FILE_TYPE = 106;
  ERROR_CODE_STORAGE_QUOTA_EXCEEDED = 107;
}